# U-Cube

./: .gitignore  README.md  description.txt
TankistU3D/server/: CMakeLists.txt  buildTankist.sh  buildUrho3D.sh
src/Demo/: Bullet.cpp  Bullet.h  CMakeLists.txt  Character.cpp  Character.h  CharacterDemo.cpp  CharacterDemo.h  CustomLogic.cpp  CustomLogic.h  DeadObject.cpp  DeadObject.h  GUI.cpp  GUI.h  GlobalVars.cpp  GlobalVars.h  Grass.cpp  Grass.h  Math.cpp  Math.h  Sample.inl  Turret.cpp  Turret.h  lImage.cpp  lImage.h  lSprite.cpp  lSprite.h
src/TacticsVictory/common/Battle/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  defines.h  glob.cpp  glob_engine.h  glob_game.h  stdafx.h
src/TacticsVictory/common/Battle/Network/: ServerS.cpp  ServerS.h
src/TacticsVictory/common/Battle/Scene/: SceneS.cpp  SceneS.h
src/TacticsVictory/common/LivingRoom/: CMakeLists.txt  LivingRoom.cpp  LivingRoom.h  globals.cpp  globals.h  main_livingroom.cpp  stdafx.h
src/TacticsVictory/common/LivingRoom/Network/: ServerHandlers.cpp  TasksMasterServer.cpp
src/TacticsVictory/common/Monitor/: CMakeLists.txt  main_monitor.cpp
src/TacticsVictory/experimental/test_libevent/: CMakeLists.txt
src/TacticsVictory/libs/victory/: CMakeLists.txt  defines.h  glob.cpp  stdafx.h  victory.h
src/TacticsVictory/libs/victory/Core/: Math_v.cpp  Math_v.h  Structures_v.cpp  Structures_v.h
src/TacticsVictory/libs/victory/FileSystem/: ConfigurationFile_v.cpp  ConfigurationFile_v.h  FileSystem_v.cpp  FileSystem_v.h
src/TacticsVictory/libs/victory/Input/: Mouse_v.cpp  Mouse_v.h
src/TacticsVictory/libs/victory/Utils/: Log_v.cpp  Log_v.h  StringUtils_v.cpp  StringUtils_v.h  UtilsOS_v.cpp  UtilsOS_v.h
src/TacticsVictory/local/Battler/: Battler.cpp  Battler.h  BattlerHandlers.cpp  CMakeLists.txt  defines.h  glob.cpp  glob_engine.h  glob_game.h  stdafx.h
src/TacticsVictory/local/Battler/Audio/: Sounds.cpp  Sounds.h
src/TacticsVictory/local/Battler/Editor/: Editor.cpp  Editor.h
src/TacticsVictory/local/Battler/GUI/: Cursor.cpp  GUI.cpp  GUI.h
src/TacticsVictory/local/Battler/Game/: Particles.cpp  Particles.h
src/TacticsVictory/local/Battler/Network/: ServerC.cpp  ServerC.h
src/TacticsVictory/local/Battler/Scene/: SceneC.cpp  SceneC.h
src/TacticsVictory/local/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  glob.cpp  glob_engine.h  glob_game.h  stdafx.h
src/TacticsVictory/local/Editor/GUI/: Cursor.cpp  GUI.cpp  GUI.h
src/TacticsVictory/remote/DataBase/: CMakeLists.txt  globals.cpp  globals.h  main_database.cpp  stdafx.h
src/TacticsVictory/remote/Master/: CMakeLists.txt  defines.h  globals.cpp  globals.h  main_master.cpp  stdafx.h
src/TacticsVictory/remote/Master/Network/: Server.cpp  Server.h  ServerHandlers.cpp
src/Tankist/: CMakeLists.txt  CopyToDirDLL.cmake  CopyToDirEXE.cmake  Install.cmake  LinkLibraries.cmake  RuntimeLibrary.cmake  SetWorkingDirectory.cmake
src/Tankist/_old_files/: ProcessingReceivedData.cpp
src/Tankist/_old_files/Battler/: Battler.cpp  BattlerHandlers.cpp  Client.cpp  CommonFunctions.cpp  CommonFunctions.h  Counters.cpp  Counters.h  Game.cpp  Game.h  Settings.cpp  Settings.h  _Battler.h  globals.cpp  globals.h  stdafx.h
src/Tankist/_old_files/Battler/Audio/: AudioCapturer.cpp  AudioCapturer.h
src/Tankist/_old_files/Battler/Core/: Math.h
src/Tankist/_old_files/Battler/GUI/: GameGUI.cpp  GameGUI.h  WindowGameESC.cpp  WindowGameESC.h  WindowSettings.cpp  WindowSettings.h
src/Tankist/_old_files/Battler/Graphics/: ImageT.cpp  ImageT.h  ProgressBar.cpp  ProgressBar.h  SpriteT.cpp  SpriteT.h
src/Tankist/_old_files/Battler/Network/: Chat.cpp  Chat.h  ChatLog.cpp  ChatLog.h  Client.cpp  Client.h  ClientTCP.cpp  ClientTCP.h  NetworkEvents.h  Server.cpp  Server.h  ServerTCP.cpp  ServerTCP.h  SocketClientTCP.cpp  SocketClientTCP.h  SocketServerTCP.cpp  SocketServerTCP.h
src/Tankist/_old_files/Battler/Objects/: CameraUni.cpp  CameraUni.h  Sight.cpp  Sight.h
src/Tankist/_old_files/Battler/dox/: 01 Compiling.h  02 Plan.h
src/Tankist/_old_files/Client/: Commands.cpp  GameWorld.cpp  GameWorld.h  Input.cpp  Input.h  Tankist.cpp  Tankist.h  globals.cpp  globals.h  stdafx.h
src/Tankist/_old_files/Client/GUI/: GameGUI.cpp  GameGUI.h  HangarGUI.cpp  HangarGUI.h
src/Tankist/_old_files/Client/Network/: Messages.cpp  Messages.h  _Socket.cpp  _Socket.h  _TcpServer.cpp  _TcpServer.h
src/Tankist/_old_files/Objects/: _GamePlayer.cpp  _Tank.cpp  _Tank.h
src/Tankist/common/Battle/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  defines.h  glob_engine.cpp  glob_engine.h  glob_game.cpp  glob_game.h  stdafx.cpp  stdafx.h
src/Tankist/common/Battle/Network/: SServer.h  (+2 more)
src/Tankist/common/Configurator/: CMakeLists.txt  Configurator.cpp
src/Tankist/common/Hangar/: CMakeLists.txt  Hangar.cpp  globals.cpp  globals.h  stdafx.h
src/Tankist/common/Monitor/: CMakeLists.txt
src/Tankist/common/Uploader/: CMakeLists.txt  Uploader.cpp  Uploader.h  globals.cpp  globals.h  main.cpp  stdafx.h
src/Tankist/common_files/: _defines.h
src/Tankist/common_files/FileSystem/: _ConfigurationFile.cpp  _ConfigurationFile.h  _FileSystem.cpp  _FileSystem.h  _ListFiles.cpp  _ListFiles.h
src/Tankist/common_files/Scene/: _GameScene.cpp  _GameScene.h
src/Tankist/common_files/Utils/: _Log.cpp  _Log.h  _LogU.cpp  _LogU.h  _StringUtils.cpp  _StringUtils.h  _SystemFunctions.cpp  _SystemFunctions.h  _SystemUtils.cpp  _SystemUtils.h
src/Tankist/local/Battler/: Battler.cpp  Battler.h  BattlerHanders.cpp  CMakeLists.txt  defines.h  glob_engine.cpp  glob_engine.h  glob_game.cpp  glob_game.h  stdafx.h
src/Tankist/local/Client/: CMakeLists.txt  Client.cpp  globals.cpp  globals.h  stdafx.cpp  stdafx.h
src/Tankist/local/Tankist/: CMakeLists.txt  Tankist.cpp  defines.h  globals.cpp  globals.h  stdafx.cpp  stdafx.h
src/Tankist/local/Updater/: CMakeLists.txt  defines.h  globals.cpp  globals.h  main.cpp  stdafx.h
src/Tankist/remote/DataBase/: CMakeLists.txt
src/Tankist/remote/Master/: CMakeLists.txt  Master.cpp  Master.h  defines.h  globals.cpp  globals.h  main.cpp  stdafx.h
(+505 files in other folders)
